<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".How_to_use">

    <TextView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:fontFamily="@font/inter"
        android:paddingBottom="25sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/page2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page1button2"
        android:background="@color/gray"
        android:padding="10sp"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/inter"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_below="@+id/app_logo"
        android:layout_marginTop="16dp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/page2_1day"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@id/page2_title"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"

        android:text="@string/page2_1day"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="13.5sp"
        android:textAlignment="center"
        android:fontFamily="@font/inter"/>

    <View
        android:id="@+id/page2_line1"
        android:layout_width="150dp"
        android:layout_height="0.5dp"
        android:layout_below="@id/page2_1day"
        android:background="@color/black"
        android:layout_marginHorizontal="20dp"/>
    
    <TextView
        android:id="@+id/page2_2day"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@id/page2_title"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        
        android:layout_alignParentEnd="true"

        android:text="@string/page2_2day"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="13.5sp"
        android:textAlignment="center"
        android:fontFamily="@font/inter"/>

    <View
        android:id="@+id/page2_line2"
        android:layout_width="150dp"
        android:layout_height="0.5dp"
        android:layout_below="@id/page2_1day"
        android:background="@color/black"
        android:layout_marginHorizontal="20dp"
        
        android:layout_alignParentEnd="true"/>
    
    <TextView
        android:id="@+id/page2_1day_i"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_below="@id/page2_line1"
        android:layout_above="@id/page2_line3"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"

        android:text="@string/page2_1day_i"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="13.5sp"
        android:textAlignment="center"
        android:fontFamily="@font/inter"/>

    <TextView
        android:id="@+id/page2_2day_i"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_below="@id/page2_line1"
        android:layout_above="@id/page2_line3"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"

        android:layout_alignParentEnd="true"

        android:text="@string/page2_2day_i"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="13.5sp"
        android:textAlignment="center"
        android:fontFamily="@font/inter"/>

    <View
        android:id="@+id/page2_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/page2_attention"
        android:layout_marginHorizontal="20dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/page2_attention"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@id/page2_line4"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"

            android:text="@string/attention"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal"
            android:fontFamily="@font/inter"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/page2_attention2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            android:fontFamily="@font/inter"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/page2_attention3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            android:fontFamily="@font/inter"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/page2_attention4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            android:fontFamily="@font/inter"/>

    </LinearLayout>

    <View
        android:id="@+id/page2_line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="80dp"
        android:background="@color/black"

        android:layout_alignParentBottom="true"/>


    <Button
        android:id="@+id/go_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"

        android:backgroundTint="@color/gray"
        android:fontFamily="@font/inter"
        android:onClick="goBack"
        android:text="@string/go_back"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:cornerRadius="20dp"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>